fixed header z-index adjust

--- a/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
+++ b/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
@@ -1500,16 +1500,20 @@ body.bgtfw-edit-links-hidden .bgtfw-edit-link a {
   /* hide animation */
 }
 
-.standard-menu-enabled .sm-clean {
-  background: transparent;
-}
-
-.standard-menu-enabled .sm-clean.sm {
+.standard-menu-enabled .site-footer .sm-clean {
   z-index: 200;
 }
 
-.standard-menu-enabled .sm-clean.sm#secondary-menu {
+.standard-menu-enabled .site-header .sm-clean {
   z-index: 201;
+}
+
+.standard-menu-enabled .site-header .sm-clean#secondary-menu {
+  z-index: 202;
+}
+
+.standard-menu-enabled .sm-clean {
+  background: transparent;
 }
 
 .standard-menu-enabled .sm-clean a,
@@ -4516,7 +4520,7 @@ footer .bgtfw-widget-row {
   .flexbox .header-fixed .site-header {
     position: fixed;
     /* set z-index lower than customizer edit buttons, but higher than site content */
-    z-index: 200;
+    z-index: 201;
   }
 }
 
